objects/copadoconnect__Additional_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>copadoconnect__Copado_Integration_ID__c</fullName>
        <label>Copado Integration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoconnect__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoconnect__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>